# example-productizer

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .prettierrc.js  Dockerfile  LICENSE.md  README.md  docker-build-deps.sh  docker-build-setup.sh  docker-runtime-entrypoint.sh  docker-runtime-setup.sh  pyproject.toml  settings.py  settings_local.py  tasks.py
.github/workflows/: docker-build-and-run.yaml  pre-commit.yaml
app/: api_tokens.py  dependencies.py  headers.py  main.py  models.py  openweathermap.py  utils.py
app/routers/: dataproduct.py  health.py
docker/: build-prepare.sh  build-setup.sh  runtime-entrypoint.sh  runtime-prepare.sh
