[tool.poetry]
name = "ioxio-dataspace-example-productizer"
version = "1.0.0"
description = ""
authors = ["IOXIO Oy"]
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
invoke = "^2.2.0"
pydantic = {version = "^2.6.3", extras = ["dotenv"]}
yarl = "^1.9.4"
pyjwt = "^2.9.0"
httpx = "^0.27.0"
cryptography = "^43.0.0"
async-lru = "^2.0.4"
aiohttp = "^3.8.1"
orjson = "^3.7.12"
stringcase = "^1.2.0"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
