[tool.poetry]
name = "ioxio-dataspace-example-productizer"
version = "1.0.0"
description = ""
authors = ["IOXIO Oy"]
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
invoke = "^2.2.0"
pydantic = "^2.6.3"
yarl = "^1.9.4"
pyjwt = "^2.8.0"
httpx = "^0.27.0"
cryptography = "^43.0.0"
async-lru = "^2.0.4"

[tool.skjold]
report_only = false
sources = ["pyup", "gemnasium"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
